--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             box-shadow: 0 0 30px rgba(75, 0, 130, 0.6);
         }
 
-        .hero-card.wizard:hover {
+        .hero-card.cyborg:hover {
             border-color: #0000ff;
             box-shadow: 0 0 30px rgba(0, 0, 255, 0.6);
         }
@@ -258,10 +258,10 @@
                 </div>
             </div>
 
-            <!-- Wizard -->
-            <div class="hero-card wizard" id="select-wizard">
-                <h2>🔮 WIZARD</h2>
-                <div class="hero-desc">Ranged Mage - Magic Book</div>
+            <!-- Cyborg -->
+            <div class="hero-card cyborg" id="select-cyborg">
+                <h2>🤖 CYBORG</h2>
+                <div class="hero-desc">Tech Caster - Arm Cannon</div>
                 <div class="abilities">
                     <div class="ability"><strong>Q/Click:</strong> Fireball (strong ranged)</div>
                     <div class="ability"><strong>Right Click:</strong> Wind Push (knockback)</div>
