--- a/index_all_heroes.html
+++ b/index_all_heroes.html
@@ -154,7 +154,7 @@
         <h2>🎮 Hero Selection</h2>
         <p>Edit main_all_heroes.js to choose your hero!</p>
         <p style="margin-top: 10px;">⚔️ Warrior | 🗡️ Assassin</p>
-        <p>🔮 Wizard | 💀 Warlock</p>
+        <p>🤖 Cyborg | 💀 Warlock</p>
     </div>
 
     <!-- Ability UI -->
