"cubes archer update version 1.3.0"

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
             box-shadow: 0 0 30px rgba(148, 0, 211, 0.6);
         }
 
+        .hero-card.archer:hover {
+            border-color: #2f7a4a;
+            box-shadow: 0 0 30px rgba(47, 122, 74, 0.6);
+        }
+
         .hero-card h2 {
             color: white;
             font-size: 32px;
@@ -267,6 +272,18 @@
                     <div class="ability"><strong>Right Click:</strong> Wind Push (knockback)</div>
                     <div class="ability"><strong>E:</strong> Bubble Shield (immunity)</div>
                     <div class="ability"><strong>R:</strong> Kame Hame Ha (beam)</div>
+                </div>
+            </div>
+
+            <!-- Archer -->
+            <div class="hero-card archer" id="select-archer">
+                <h2>🏹 ARCHER</h2>
+                <div class="hero-desc">Ranged Marksman - Bow & Arrow</div>
+                <div class="abilities">
+                    <div class="ability"><strong>Q/Click:</strong> Shoot Arrow (charge)</div>
+                    <div class="ability"><strong>Right Click:</strong> Healing Potion (HoT + speed)</div>
+                    <div class="ability"><strong>E:</strong> Teleport Arrow (blink)</div>
+                    <div class="ability"><strong>R:</strong> Machine Bow (rapid fire)</div>
                 </div>
             </div>
 
