"archer update version 1.3.1"

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="hero-desc">Tech Caster - Arm Cannon</div>
                 <div class="abilities">
                     <div class="ability"><strong>Q/Click:</strong> Fireball (strong ranged)</div>
-                    <div class="ability"><strong>Right Click:</strong> Wind Push (knockback)</div>
+                    <div class="ability"><strong>Right Click:</strong> Freeze Blast (knockback)</div>
                     <div class="ability"><strong>E:</strong> Bubble Shield (immunity)</div>
                     <div class="ability"><strong>R:</strong> Kame Hame Ha (beam)</div>
                 </div>
